--- a/source/_posts/2016-08-18-xingji-1.markdown
+++ b/source/_posts/2016-08-18-xingji-1.markdown
@@ -16,22 +16,22 @@ tags: [行迹]
 
 以下是第一版的截图：
 
-{% img /images/xingji-1/1.jpg%}
+{% img /imgs/xingji-1/1.jpg%}
 
-{% img /images/xingji-1/2.jpg%}
+{% img /imgs/xingji-1/2.jpg%}
 
-{% img /images/xingji-1/3.jpg%}
+{% img /imgs/xingji-1/3.jpg%}
 
-{% img /images/xingji-1/4.jpg%}
+{% img /imgs/xingji-1/4.jpg%}
 
 第二版后端用了leancloud和腾讯云的TAB服务，后端要考虑的东西大大减少，需要学习一些接口操作等，算是方便了不少。客户端的风格采用侧滑式，照着手机上几款相似的应用（网易云音乐，bilibili，即刻，掘金等）慢慢设计客户端的UI和交互，尽力去实现，实在不能就找开源库或者可替代方案了。
 
 这是第二版的截图：
 
-{% img /images/xingji-1/5.jpg%}
+{% img /imgs/xingji-1/5.jpg%}
 
-{% img /images/xingji-1/6.jpg%}
+{% img /imgs/xingji-1/6.jpg%}
 
-{% img /images/xingji-1/7.jpg%}
+{% img /imgs/xingji-1/7.jpg%}
 
 好了，第二篇开始具体讲重构过程中的具体技术问题，目前没能力谈架构，先做好技术细节，慢慢总结，复杂的问题以后也会慢慢遇到和解决的。
